# MarketSim

./: .gitignore  Cargo.toml  README.md  run_n_trials.py
configs/: consts.csv  dists.csv  testcfg.csv
examples/: copy_csvs.rs  random_arrivals.rs
log/: mempool_data_0_test2_CDA.csv  mempool_data_0_test2_FBA.csv  mempool_data_0_test2_KLF.csv  mempool_data_0_test_CDA.csv  mempool_data_0_test_FBA.csv  mempool_data_0_test_KLF.csv  mempool_data_1_test_CDA.csv  mempool_data_1_test_FBA.csv  mempool_data_1_test_KLF.csv  order_books_0_test2_CDA.csv  order_books_0_test2_FBA.csv  order_books_0_test2_KLF.csv  order_books_0_test_CDA.csv  order_books_0_test_FBA.csv  order_books_0_test_KLF.csv  order_books_1_test_CDA.csv  order_books_1_test_FBA.csv  order_books_1_test_KLF.csv  player_data_0_test2_CDA.csv  player_data_0_test2_FBA.csv  player_data_0_test2_KLF.csv  player_data_0_test_CDA.csv  player_data_0_test_FBA.csv  player_data_0_test_KLF.csv  player_data_1_test_CDA.csv  player_data_1_test_FBA.csv  player_data_1_test_KLF.csv  results_0_test2_CDA.csv  results_0_test2_FBA.csv  results_0_test2_KLF.csv  results_0_test_CDA.csv  results_0_test_FBA.csv  results_0_test_KLF.csv  results_1_test_CDA.csv  results_1_test_FBA.csv  results_1_test_KLF.csv
src/: lib.rs  main.rs
src/blockchain/: mem_pool.rs  mempool_processor.rs  mod.rs  order_processor.rs
src/controller/: mod.rs
src/exchange/: clearing_house.rs  exchange_logic.rs  mod.rs
src/io/: tcp_json.rs  ws_json.rs
src/order/: mod.rs  order.rs  order_book.rs
tests/: conc_integration_test.rs  miner_integration_test.rs
(+14 files in other folders)
